--- a/app_jokenpo/css/estilo.css
+++ b/app_jokenpo/css/estilo.css
@@ -2,3 +2,17 @@
     margin:  0px;
     padding: 0px;
 }
+
+.container{
+    margin: 0 auto;
+    width: 500px;
+
+    /*
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+    */
+}
